force-app/main/default/objects/Car__c/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <description>The car brand</description>
    <label>Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>