force-app/main/default/objects/Car__c/fields/color__c.field-meta.xml
<CustomField>
    <fullName>color__c</fullName>
    <description>Color of the car</description>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>