force-app/main/default/objects/Car__c/fields/condition__c.field-meta.xml
<CustomField>
    <fullName>condition__c</fullName>
    <description>A notation from 0 to 100 about the general condition of the car
0 = worst condition; 100 = best condition</description>
    <label>Condition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>