force-app/main/default/objects/Car__c/fields/immatriculation__c.field-meta.xml
<CustomField>
    <fullName>immatriculation__c</fullName>
    <description>The vehicule immatriculation number</description>
    <label>Immatriculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>