force-app/main/default/objects/Car__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <description>The car model</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>