force-app/main/default/objects/Car__c/fields/summary__c.field-meta.xml
<CustomField>
    <fullName>summary__c</fullName>
    <description>The car damages summary</description>
    <label>Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>