force-app/main/default/objects/Car__c/fields/Total_damages__c.field-meta.xml
<CustomField>
    <fullName>Total_damages__c</fullName>
    <description>The total number of damages</description>
    <label>Total damages</label>
    <summaryForeignKey>Damage__c.Car__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>