force-app/main/default/objects/Car__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>immatriculation__c</columns>
    <columns>brand__c</columns>
    <columns>model__c</columns>
    <columns>color__c</columns>
    <columns>Total_damages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>